welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:25: error: not found: value baissebrosse
  baissebrosse()
  ^PatternPicture:41: error: not found: value setCouleurBroses
  setCouleurBroses(Color.green)
  ^