welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  carreau()
  avance()
  avance()
  avance()
  carreau()
  avance()
  avance()
  avance()
  left()
  avance()
  avance()
  avance()
  right()
  carreau()
  avance()
  avance()
  avance()
  carreau()
}

def carreau(){
  avance()
  setCouleurBrosse(Color.red)
  baissebrosse()
  leveBrosse()
  recule()
  left()
  avance()
  baisseBrosse()
  leveBrosse()
  setCouleurBrosse(Color.yellow)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  right()
  avance()
  baisseBrosse()
  leveBrosse()
  setCouleurBroses(Color.green)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  right()
  avance()
  baisseBrosse()
  leveBrosse()
  setCouleurBrosse(Color.blue)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  right()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  avance()
  right()
  right()
}

